@@ -18,161 +18,190 @@ import edu.uclm.esi.iso2.banco20193capas.exceptions.ImporteInvalidoException;
 import edu.uclm.esi.iso2.banco20193capas.exceptions.SaldoInsuficienteException;
 
 /**
-* La clase {@code Cuenta} representa una cuenta bancaria, que ha de tener al menos un Cliente que sea titular.
-* 
-* 
-*/
+ * La clase {@code Cuenta} representa una cuenta bancaria, que ha de tener al
+ * menos un Cliente que sea titular.
+ * 
+ * 
+ */
 @Entity
 public class Cuenta {
-	@Id 
-	protected Long id;
+	@Id
+	protected Long idCuenta;
 
 	@ManyToMany(fetch = FetchType.EAGER)
 	private List<Cliente> titulares;
-	
+
 	private boolean creada;
-		
+
 	public Cuenta() {
-		this.titulares=new ArrayList<>();
+		this.titulares = new ArrayList<>();
 	}
-	
-	public Cuenta(Long id) {
+
+	public Cuenta(final Long idCuenta) {
 		this();
-		this.id=id;
+		this.idCuenta = idCuenta;
 	}
-	
-	public Cuenta(Integer id) {
-		this(new Long(id));
+
+	public Cuenta(final Integer idCuenta) {
+		this(Long.valueOf(id));
 	}
-	
+
 	/**
 	 * Añade un cliente a la lista de titulares de esta cuenta
+	 * 
 	 * @param cliente El cliente que se añade a la lista de titulares
-	 * @throws CuentaYaCreadaException Si la cuenta ya se ha almacenado en la base de datos
+	 * @throws CuentaYaCreadaException Si la cuenta ya se ha almacenado en la base
+	 *                                 de datos
 	 */
-	public void addTitular(Cliente cliente) throws CuentaYaCreadaException {
-		if (creada)
+	public void addTitular(final Cliente cliente) throws CuentaYaCreadaException {
+		if (creada) {
 			throw new CuentaYaCreadaException();
+		}
 		this.titulares.add(cliente);
 	}
-	
+
 	/**
 	 * Realiza un ingreso en la cuenta
-	 * @param importe	El importe que se ingresa
-	 * @throws ImporteInvalidoException	Si el importe es menor o igual que 0
+	 * 
+	 * @param importe El importe que se ingresa
+	 * @throws ImporteInvalidoException Si el importe es menor o igual que 0
 	 */
-	public void ingresar(double importe) throws ImporteInvalidoException {
+	public void ingresar(final double importe) throws ImporteInvalidoException {
 		this.ingresar(importe, "Ingreso de efectivo");
 	}
 
-	private void ingresar(double importe, String concepto) throws ImporteInvalidoException {
-		if (importe<=0)
+	private void ingresar(final double importe, final String concepto) throws ImporteInvalidoException {
+		if (importe <= 0) {
 			throw new ImporteInvalidoException(importe);
-		MovimientoCuenta movimiento = new MovimientoCuenta(this, importe, concepto);
+		}
+		final MovimientoCuenta movimiento = new MovimientoCuenta(this, importe, concepto);
 		Manager.getMovimientoDAO().save(movimiento);
 	}
-	
+
 	/**
 	 * Realiza una retirada de la cuenta
-	 * @param importe	El importe que se retira
-	 * @throws ImporteInvalidoException	Si el importe es menor o igual que 0
-	 * @throws SaldoInsuficienteException	Si el importe mayor getSaldo()
+	 * 
+	 * @param importe El importe que se retira
+	 * @throws ImporteInvalidoException   Si el importe es menor o igual que 0
+	 * @throws SaldoInsuficienteException Si el importe mayor getSaldo()
 	 */
-	public void retirar(double importe) throws ImporteInvalidoException, SaldoInsuficienteException {
+	public void retirar(final double importe) throws ImporteInvalidoException, SaldoInsuficienteException {
 		this.retirar(importe, "Retirada de efectivo");
 	}
-		
-	private void retirar(double importe, String concepto) throws ImporteInvalidoException, SaldoInsuficienteException {
-		if (importe<=0)
+
+	private void retirar(final double importe, final String concepto)
+			throws ImporteInvalidoException, SaldoInsuficienteException {
+		if (importe <= 0) {
 			throw new ImporteInvalidoException(importe);
-		if (importe>getSaldo())
+		}
+		if (importe > getSaldo()) {
 			throw new SaldoInsuficienteException();
-		MovimientoCuenta movimiento = new MovimientoCuenta(this, -importe, concepto);
+		}
+		final MovimientoCuenta movimiento = new MovimientoCuenta(this, -importe, concepto);
 		Manager.getMovimientoDAO().save(movimiento);
 	}
 
 	/**
 	 * Retira el importe de la cuenta, incluso aunque esta no tenga saldo suficiente
-	 * @param importe	El importe que se retira
-	 * @param concepto	El concepto del movimiento
+	 * 
+	 * @param importe  El importe que se retira
+	 * @param concepto El concepto del movimiento
 	 */
-	public void retiroForzoso(double importe, String concepto) {
-		MovimientoCuenta movimiento = new MovimientoCuenta(this, -importe, concepto);
+	public void retiroForzoso(final double importe, final String concepto) {
+		final MovimientoCuenta movimiento = new MovimientoCuenta(this, -importe, concepto);
 		Manager.getMovimientoDAO().save(movimiento);
 	}
-	
+
 	/**
-	 * Realiza una transferencia desde esta cuenta a la cuenta que se pasa como primer parámetro.
-	 * Se cobra una comisión del 1%, con un mínimo de 1.5 euros
-	 * @param numeroCuentaDestino	El id de la cuenta destino
-	 * @param importe				El importe que se transfiere
-	 * @param concepto				El concepto de la transferencia
-	 * @throws CuentaInvalidaException	Si la cuenta destino es esta misma o no existe en la BD
-	 * @throws ImporteInvalidoException	Si el importe es menor o igual que 0
-	 * @throws SaldoInsuficienteException	Si la cuenta no tiene saldo suficiente para afrontar el importe y la comisión
+	 * Realiza una transferencia desde esta cuenta a la cuenta que se pasa como
+	 * primer parámetro. Se cobra una comisión del 1%, con un mínimo de 1.5 euros
+	 * 
+	 * @param numCDestino El id de la cuenta destino
+	 * @param importe     El importe que se transfiere
+	 * @param concepto    El concepto de la transferencia
+	 * @throws CuentaInvalidaException    Si la cuenta destino es esta misma o no
+	 *                                    existe en la BD
+	 * @throws ImporteInvalidoException   Si el importe es menor o igual que 0
+	 * @throws SaldoInsuficienteException Si la cuenta no tiene saldo suficiente
+	 *                                    para afrontar el importe y la comisión
 	 */
-	public void transferir(Long numeroCuentaDestino, double importe, String concepto) throws CuentaInvalidaException, ImporteInvalidoException, SaldoInsuficienteException {
-		if (this.getId().equals(numeroCuentaDestino))
-			throw new CuentaInvalidaException(numeroCuentaDestino);
+	public void transferir(final Long numCDestino, final double importe, final String concepto)
+			throws CuentaInvalidaException, ImporteInvalidoException, SaldoInsuficienteException {
+		if (this.getId().equals(numCDestino)) {
+			throw new CuentaInvalidaException(numCDestino);
+		}
 		this.retirar(importe, "Transferencia emitida");
-		double comision = Math.max(0.01*importe, 1.5);
+		final double comision = Math.max(0.01 * importe, 1.5);
 		this.retirar(comision, "Comisión por transferencia");
-		Cuenta destino = this.load(numeroCuentaDestino);
+		final Cuenta destino = this.load(numCDestino);
 		destino.ingresar(importe, "Transferencia recibida");
 	}
-	
-	private Cuenta load(Long numero) throws CuentaInvalidaException {
-		Optional<Cuenta> optCuenta = Manager.getCuentaDAO().findById(numero);
-		if (!optCuenta.isPresent())
+
+	private Cuenta load(final Long numero) throws CuentaInvalidaException {
+		final Optional<Cuenta> optCuenta = Manager.getCuentaDAO().findById(numero);
+		if (!optCuenta.isPresent()) {
 			throw new CuentaInvalidaException(numero);
+		}
 		return optCuenta.get();
 	}
 
 	/**
 	 * Devuelve el saldo de la cuenta
-	 * @return	El saldo de la cuenta
+	 * 
+	 * @return El saldo de la cuenta
 	 */
 	public double getSaldo() {
-		List<MovimientoCuenta> mm = Manager.getMovimientoDAO().findByCuentaId(this.id);
+		final List<MovimientoCuenta> listaMovis = Manager.getMovimientoDAO().findByCuentaId(this.idCuenta);
 		double saldo = 0.0;
-		for (MovimientoCuenta m : mm)
-			saldo = saldo + m.getImporte();
+		for (MovimientoCuenta movimiento : listaMovis) {
+			saldo += movimiento.getImporte();
+		}
 		return saldo;
 	}
 
 	/**
 	 * Inserta la cuenta en la base de datos
-	 * @throws CuentaSinTitularesException	Si no se ha asignado ningún titular a la cuenta
+	 * 
+	 * @throws CuentaSinTitularesException Si no se ha asignado ningún titular a la
+	 *                                     cuenta
 	 */
 	public void insert() throws CuentaSinTitularesException {
-		if (this.titulares.isEmpty())
+		if (this.titulares.isEmpty()) {
 			throw new CuentaSinTitularesException();
+		}
 		this.creada = true;
 		Manager.getCuentaDAO().save(this);
 	}
 
 	/**
 	 * Emite una tarjeta de débito asociada a esta cuenta
-	 * @param nif	NIF del cliente para el que se emite la tarjeta
-	 * @return	La tarjeta de débito (@see {@link edu.uclm.esi.iso2.banco20193capas.model.TarjetaDebito})
-	 * @throws ClienteNoEncontradoException	Si el cliente no está en la base de datos
-	 * @throws ClienteNoAutorizadoException	Si el cliente no es titular de esta cuenta
+	 * 
+	 * @param nif NIF del cliente para el que se emite la tarjeta
+	 * @return La tarjeta de débito (@see
+	 *         {@link edu.uclm.esi.iso2.banco20193capas.model.TarjetaDebito})
+	 * @throws ClienteNoEncontradoException Si el cliente no está en la base de
+	 *                                      datos
+	 * @throws ClienteNoAutorizadoException Si el cliente no es titular de esta
+	 *                                      cuenta
 	 */
-	public TarjetaDebito emitirTarjetaDebito(String nif) throws ClienteNoEncontradoException, ClienteNoAutorizadoException {
-		Optional<Cliente> optCliente = Manager.getClienteDAO().findByNif(nif);
-		if (!optCliente.isPresent())
-			throw new ClienteNoEncontradoException(nif);
-		Cliente cliente = optCliente.get();
+	public TarjetaDebito emitirTarjetaDebito(final String nif)
+			throws ClienteNoEncontradoException, ClienteNoAutorizadoException {
+		final Optional<Cliente> optCliente = Manager.getClienteDAO().findByNif(nif);
 		boolean encontrado = false;
-		for (Cliente titular : this.titulares)
+		if (!optCliente.isPresent()) {
+			throw new ClienteNoEncontradoException(nif);
+		}
+		final Cliente cliente = optCliente.get();
+		for (final Cliente titular : this.titulares) {
 			if (titular.getNif().equals(cliente.nif)) {
 				encontrado = true;
 				break;
 			}
-
-		if (!encontrado)
-			throw new ClienteNoAutorizadoException(nif, this.id);
-		TarjetaDebito tarjeta = new TarjetaDebito();
+		}
+		if (!encontrado) {
+			throw new ClienteNoAutorizadoException(nif, this.idCuenta);
+		}
+		final TarjetaDebito tarjeta = new TarjetaDebito();
 		tarjeta.setCuenta(this);
 		tarjeta.setTitular(cliente);
 		Manager.getTarjetaDebitoDAO().save(tarjeta);
@@ -181,26 +210,34 @@ public class Cuenta {
 
 	/**
 	 * Emite una tarjeta de débito asociada a esta cuenta
-	 * @param nif	El nif del cliente para el cual se emite esta tarjeta
-	 * @param credito	El crédito concedido
-	 * @return	La tarjeta de crédito (@see {@link edu.uclm.esi.iso2.banco20193capas.model.TarjetaCredito})
-	 * @throws ClienteNoEncontradoException	Si el cliente no está en la base de datos
-	 * @throws ClienteNoAutorizadoException	Si el cliente no es titular de esta cuenta
+	 * 
+	 * @param nif     El nif del cliente para el cual se emite esta tarjeta
+	 * @param credito El crédito concedido
+	 * @return La tarjeta de crédito (@see
+	 *         {@link edu.uclm.esi.iso2.banco20193capas.model.TarjetaCredito})
+	 * @throws ClienteNoEncontradoException Si el cliente no está en la base de
+	 *                                      datos
+	 * @throws ClienteNoAutorizadoException Si el cliente no es titular de esta
+	 *                                      cuenta
 	 */
-	public TarjetaCredito emitirTarjetaCredito(String nif, double credito) throws ClienteNoEncontradoException, ClienteNoAutorizadoException {
-		Optional<Cliente> optCliente = Manager.getClienteDAO().findByNif(nif);
-		if (!optCliente.isPresent())
+	public TarjetaCredito emitirTarjetaCredito(final String nif, final double credito)
+			throws ClienteNoEncontradoException, ClienteNoAutorizadoException {
+		final Optional<Cliente> optCliente = Manager.getClienteDAO().findByNif(nif);
+		if (!optCliente.isPresent()) {
 			throw new ClienteNoEncontradoException(nif);
-		Cliente cliente = optCliente.get();
+		}
+		final Cliente cliente = optCliente.get();
 		boolean encontrado = false;
-		for (Cliente titular : this.titulares)
+		for (final Cliente titular : this.titulares) {
 			if (titular.getNif().equals(cliente.nif)) {
 				encontrado = true;
 				break;
 			}
-		if (!encontrado)
-			throw new ClienteNoAutorizadoException(nif, this.id);
-		TarjetaCredito tarjeta = new TarjetaCredito();
+		}
+		if (!encontrado) {
+			throw new ClienteNoAutorizadoException(nif, this.idCuenta);
+		}
+		final TarjetaCredito tarjeta = new TarjetaCredito();
 		tarjeta.setCuenta(this);
 		tarjeta.setTitular(cliente);
 		tarjeta.setCredito(credito);
@@ -209,18 +246,18 @@ public class Cuenta {
 	}
 
 	public Long getId() {
-		return id;
+		return idCuenta;
 	}
 
-	public void setId(Long id) {
-		this.id = id;
+	public void setId(final Long idCuenta) {
+		this.idCuenta = idCuenta;
 	}
 
 	public List<Cliente> getTitulares() {
 		return titulares;
 	}
 
-	public void setTitulares(List<Cliente> titulares) {
+	public void setTitulares(final List<Cliente> titulares) {
 		this.titulares = titulares;
 	}
 
@@ -228,7 +265,7 @@ public class Cuenta {
 		return creada;
 	}
 
-	public void setCreada(boolean creada) {
+	public void setCreada(final boolean creada) {
 		this.creada = creada;
 	}
 }
